Remove Authentication.
