# m8flow-backend/src/m8flow_backend/api.yml
@@ -1593,10 +1593,6 @@ paths:
                 properties:
                   can_manage_processes:
                     type: boolean
-                  can_read_authentications:
-                    type: boolean
-                  can_manage_authentications:
-                    type: boolean
                   can_read_secrets:
                     type: boolean
                     description: >-
